--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="Source\Engine\rendering_buffer.h" />
     <ClInclude Include="Source\Engine\render_path.h" />
     <ClInclude Include="Source\Engine\resource_manager.h" />
+    <ClInclude Include="Source\Engine\shader_resource_mapping.h" />
     <ClInclude Include="Source\Engine\sampler.h" />
     <ClInclude Include="Source\Engine\scene.h" />
     <ClInclude Include="Source\Engine\scene_game.h" />
@@ -223,6 +224,7 @@
     <None Include="Shader\general.hlsli" />
     <None Include="Shader\monochrome.hlsli" />
     <None Include="Shader\phong.hlsli" />
+    <None Include="Shader\shader_resource_mapping.hlsli" />
     <None Include="Shader\shadow_functions.hlsli" />
     <None Include="Shader\shadow_map.hlsli" />
     <None Include="Shader\single_color.hlsli" />
@@ -566,7 +568,7 @@
     <ProjectGuid>{14693518-A8F1-4B7F-B512-18E45DD4B7C2}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>SunLight</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>Cumulonimbus</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
