--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -222,6 +222,7 @@
     <ClCompile Include="Source\test_animation_character.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="Shader\3d_standard.hlsli" />
     <None Include="Shader\bloom.hlsli" />
     <None Include="Shader\cook_torrance.hlsli" />
